Fix splash logo and mac launch

--- a/apps/wrapper/src/splash.html
+++ b/apps/wrapper/src/splash.html
@@ -35,7 +35,7 @@
   </style>
 </head>
 <body>
-  <div class="logo"><img src="../assets/icon.png" width="80" height="80" style="vertical-align:middle; margin-right:12px; border-radius:16px;">OCcode</div>
+  <div class="logo"><img id="logo-img" src="../assets/icon.png" width="80" height="80" style="vertical-align:middle; margin-right:12px; border-radius:16px;">OCcode</div>
   <div class="sub">Powered by OpenClaw</div>
   <div class="spinner"></div>
   <div id="status">Starting…</div>
